--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,7 +26,9 @@
             android:layout_marginEnd="8dp"
             android:ems="10"
             android:hint="Email Id"
+            android:imeOptions="actionNext"
             android:inputType="textEmailAddress"
+            android:singleLine="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -40,7 +42,9 @@
             android:layout_marginEnd="8dp"
             android:ems="10"
             android:hint="Password"
-            android:inputType="textEmailAddress"
+            android:imeOptions="actionDone"
+            android:inputType="textPassword"
+            android:singleLine="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/email_et" />
@@ -52,8 +56,8 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="40dp"
             android:layout_marginEnd="8dp"
-            android:text="Login"
             android:onClick="@{() -> viewModel.onServerLoginClick()}"
+            android:text="Login"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
