--- a/rflooker/src/main/res/layout/activity_login.xml
+++ b/rflooker/src/main/res/layout/activity_login.xml
@@ -2,7 +2,6 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/layout2"
     tools:context=".ui.login.LoginActivity">
 
     <data>
@@ -14,6 +13,7 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/login_parent"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
